# prisma-cloud-pipeline

./: .gitignore  Dockerfile  LICENCE.txt  Makefile  README.md  example-rules.yaml  example.yaml  pyproject.toml
.github/: .dependabot.yml
.github/workflows/: ci.yaml
prisma_cloud_pipeline/: __init__.py  __main__.py  lib.py  rules-schema.json
test/: data.json  spec-results.json  spec-stdout  spec-triaged.json
